# progaming_test_task

./: .gitignore  Dockerfile  Readme.md  docker-compose.yml  manage.py  pyproject.toml
commands/: start_server.sh
task_management_system/: admin.py  apps.py  consumers.py  mixins.py  models.py  routing.py  serializers.py  urls.py  views.py
task_management_system/migrations/: 0001_initial.py
task_management_system/tests/: test_api.py  test_cache.py  test_consumers.py
